--- a/eurekaclient.yml
+++ b/eurekaclient.yml
@@ -3,4 +3,9 @@ server:
 spring:
   application:
     name: eurekaclient
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh,health,info
 
